Resize grid correctly so that there are no overlapping cells and etch-a-sketch line draws with appropriate width

--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,17 @@ body {
 
 .grid-container {
     display: inline-grid;
+    gap: 1px;
     max-width: 960px;
     max-height: 960px;
-    grid-template-columns: repeat(16, 35px [col-start]);
-    grid-template-rows: repeat(16, 35px [col-start]);
+    grid-template-columns: repeat(16, 45px [col-start]);
+    grid-template-rows: repeat(16, 45px [col-start]);
 }
 
 .cell {
     border-style: solid;
     border-width: 1px;
     border-color: grey;
-    width: 35px;
-    height: 35px;
+    width: 45px;
+    height: 45px;
 }
